added Key interface for configuration keys, extracted HttpClientFactory interface, added previewable HttpEntity, and other updates